--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydbtest
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db2
+spring.datasource.username=jpauser
+spring.datasource.password=jpapwd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.package = web.model
 
